--- a/NN1.ipynb
+++ b/NN1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -37,18 +36,12 @@
      ]
     }
    ],
-=======
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
->>>>>>> ef6c864cf53857f0fe20b3d1bf35ee399543adfd
    "source": [
     "import warnings\n",
     "#warnings.simplefilter(action=\"ignore\", category=FutureWarning)\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-<<<<<<< HEAD
     "from tensorflow.keras import layers\n",
     "import pandas as pd"
    ]
@@ -239,16 +232,12 @@
    "outputs": [],
    "source": [
     "df.dropna(axis=\"columns\", inplace=True)"
-=======
-    "from tensorflow.keras import layers"
->>>>>>> ef6c864cf53857f0fe20b3d1bf35ee399543adfd
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-<<<<<<< HEAD
    "outputs": [],
    "source": [
     "df.drop(df.columns[[0,1, 5, 6,7]], axis=1, inplace=True)"
@@ -949,8 +938,6 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-=======
->>>>>>> ef6c864cf53857f0fe20b3d1bf35ee399543adfd
    "outputs": [
     {
      "name": "stdout",
@@ -965,7 +952,6 @@
    "source": [
     "model = keras.Sequential(\n",
     "    [\n",
-<<<<<<< HEAD
     "        layers.Dense(3, activation=\"relu\", name=\"layer1\"),\n",
     "        layers.Dense(3, activation=\"relu\", name=\"layer2\"),\n",
     "        layers.Dense(1, name=\"layer3\"),\n",
@@ -980,23 +966,14 @@
    "outputs": [],
    "source": [
     "model.compile(optimizer=\"adam\", loss = 'binary_crossentropy', metrics = ['accuracy'])"
-=======
-    "        layers.Dense(2, activation=\"relu\", name=\"layer1\"),\n",
-    "        layers.Dense(3, activation=\"relu\", name=\"layer2\"),\n",
-    "        layers.Dense(4, name=\"layer3\"),\n",
-    "    ]\n",
-    ")\n",
-    "# Call model on a test input\n",
-    "x = tf.ones((3, 3))\n",
-    "y = model(x)\n"
->>>>>>> ef6c864cf53857f0fe20b3d1bf35ee399543adfd
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3114,7 +3091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3122,20 +3099,6 @@
      "output_type": "stream",
      "text": [
       "0.3504669610220029\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "continuous is not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-03d5e2db6fe8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mme\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmean_squared_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mme\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36minner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     70\u001b[0m                           FutureWarning)\n\u001b[0;32m     71\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0marg\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py\u001b[0m in \u001b[0;36maccuracy_score\u001b[1;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[0;32m    185\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    186\u001b[0m     \u001b[1;31m# Compute accuracy for each possible representation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 187\u001b[1;33m     \u001b[0my_type\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    188\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    189\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0my_type\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'multilabel'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m     96\u001b[0m     \u001b[1;31m# No metrics support \"multiclass-multioutput\" format\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0my_type\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"binary\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"multiclass\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"multilabel-indicator\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 98\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{0} is not supported\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    100\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"binary\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"multiclass\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: continuous is not supported"
      ]
     }
    ],
@@ -3157,15 +3120,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-=======
-   "execution_count": 9,
->>>>>>> ef6c864cf53857f0fe20b3d1bf35ee399543adfd
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "Text(0, 0.5, 'actual')"
       ]
      },
@@ -3190,23 +3149,6 @@
     "plt.scatter(y_pred, y_test)\n",
     "plt.xlabel(\"predictions\")\n",
     "plt.ylabel(\"actual\")"
-=======
-       "[<tf.Variable 'sequential/layer1/kernel:0' shape=(3, 2) dtype=float32>,\n",
-       " <tf.Variable 'sequential/layer1/bias:0' shape=(2,) dtype=float32>,\n",
-       " <tf.Variable 'sequential/layer2/kernel:0' shape=(2, 3) dtype=float32>,\n",
-       " <tf.Variable 'sequential/layer2/bias:0' shape=(3,) dtype=float32>,\n",
-       " <tf.Variable 'sequential/layer3/kernel:0' shape=(3, 4) dtype=float32>,\n",
-       " <tf.Variable 'sequential/layer3/bias:0' shape=(4,) dtype=float32>]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.weights"
->>>>>>> ef6c864cf53857f0fe20b3d1bf35ee399543adfd
    ]
   },
   {
