--- a/Preprocessor.ipynb
+++ b/Preprocessor.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "txt_data.drop([\"Zeit:\"], inplace=True, axis=1)"
+    "txt_data.drop([\"Zeit:\", \"Alarm Nr. 1\"], inplace=True, axis=1)"
    ]
   },
   {
@@ -139,9 +139,8 @@
     {
      "data": {
       "text/plain": [
-       "Istwert Durchfluss     object\n",
-       "Totalisator            object\n",
-       "Alarm Nr. 1           float64\n",
+       "Istwert Durchfluss    object\n",
+       "Totalisator           object\n",
        "dtype: object"
       ]
      },
@@ -182,11 +181,9 @@
        "      <th></th>\n",
        "      <th>Istwert Durchfluss</th>\n",
        "      <th>Totalisator</th>\n",
-       "      <th>Alarm Nr. 1</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Time</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -196,44 +193,39 @@
        "      <th>2020-08-25 13:01:56.810</th>\n",
        "      <td>0</td>\n",
        "      <td>4,560843</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-08-25 13:01:56.931</th>\n",
        "      <td>0</td>\n",
        "      <td>4,560843</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-08-25 13:01:57.930</th>\n",
        "      <td>0</td>\n",
        "      <td>4,560843</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-08-25 13:01:57.226</th>\n",
        "      <td>0</td>\n",
        "      <td>4,560843</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-08-25 13:01:57.347</th>\n",
        "      <td>0</td>\n",
        "      <td>4,560843</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Istwert Durchfluss Totalisator  Alarm Nr. 1\n",
-       "Time                                                               \n",
-       "2020-08-25 13:01:56.810                  0    4,560843          0.0\n",
-       "2020-08-25 13:01:56.931                  0    4,560843          0.0\n",
-       "2020-08-25 13:01:57.930                  0    4,560843          0.0\n",
-       "2020-08-25 13:01:57.226                  0    4,560843          0.0\n",
-       "2020-08-25 13:01:57.347                  0    4,560843          0.0"
+       "                        Istwert Durchfluss Totalisator\n",
+       "Time                                                  \n",
+       "2020-08-25 13:01:56.810                  0    4,560843\n",
+       "2020-08-25 13:01:56.931                  0    4,560843\n",
+       "2020-08-25 13:01:57.930                  0    4,560843\n",
+       "2020-08-25 13:01:57.226                  0    4,560843\n",
+       "2020-08-25 13:01:57.347                  0    4,560843"
       ]
      },
      "execution_count": 11,
@@ -591,7 +583,6 @@
        "      <th>Stack Temperatur(C)</th>\n",
        "      <th>Istwert Durchfluss</th>\n",
        "      <th>Totalisator</th>\n",
-       "      <th>Alarm Nr. 1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -603,7 +594,6 @@
        "      <td>27</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -613,7 +603,6 @@
        "      <td>27</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -623,7 +612,6 @@
        "      <td>27</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -633,7 +621,6 @@
        "      <td>27</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -643,11 +630,9 @@
        "      <td>27</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -663,7 +648,6 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2761</th>\n",
@@ -673,7 +657,6 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2762</th>\n",
@@ -683,7 +666,6 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2763</th>\n",
@@ -693,7 +675,6 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2764</th>\n",
@@ -703,11 +684,10 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>8,624094</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2765 rows × 7 columns</p>\n",
+       "<p>2765 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -724,20 +704,20 @@
        "2763 2025-08-20 13:14:17       16,615385         0,400000    \n",
        "2764 2025-08-20 13:14:18       16,615385         0,400000    \n",
        "\n",
-       "      Stack Temperatur(C) Istwert Durchfluss Totalisator  Alarm Nr. 1  \n",
-       "0                      27                  0    8,624094          0.0  \n",
-       "1                      27                  0    8,624094          0.0  \n",
-       "2                      27                  0    8,624094          0.0  \n",
-       "3                      27                  0    8,624094          0.0  \n",
-       "4                      27                  0    8,624094          0.0  \n",
-       "...                   ...                ...         ...          ...  \n",
-       "2760                   30                  0    8,624094          0.0  \n",
-       "2761                   30                  0    8,624094          0.0  \n",
-       "2762                   30                  0    8,624094          0.0  \n",
-       "2763                   30                  0    8,624094          0.0  \n",
-       "2764                   30                  0    8,624094          0.0  \n",
+       "      Stack Temperatur(C) Istwert Durchfluss Totalisator  \n",
+       "0                      27                  0    8,624094  \n",
+       "1                      27                  0    8,624094  \n",
+       "2                      27                  0    8,624094  \n",
+       "3                      27                  0    8,624094  \n",
+       "4                      27                  0    8,624094  \n",
+       "...                   ...                ...         ...  \n",
+       "2760                   30                  0    8,624094  \n",
+       "2761                   30                  0    8,624094  \n",
+       "2762                   30                  0    8,624094  \n",
+       "2763                   30                  0    8,624094  \n",
+       "2764                   30                  0    8,624094  \n",
        "\n",
-       "[2765 rows x 7 columns]"
+       "[2765 rows x 6 columns]"
       ]
      },
      "execution_count": 24,
