--- a/RandomForestLargeDataset.ipynb
+++ b/RandomForestLargeDataset.ipynb
@@ -105,8 +105,8 @@
    ],
    "source": [
     "plt.scatter(y_pred, y_test)\n",
-    "plt.xlabel(\"predictions\")\n",
-    "plt.ylabel(\"actual\")\n",
+    "plt.xlabel(\"Vorhersage\")\n",
+    "plt.ylabel(\"Experiment\")\n",
     "plt.plot([13, 20], [13, 20])\n",
     "plt.show()"
    ]
